don't use background when you mean background-color

--- a/colored_circle.css
+++ b/colored_circle.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: #333;
+    background-color: #333;
     color: #fff;
     font: 300 100.1% "Helvetica Neue", Helvetica, "Arial Unicode MS", Arial, sans-serif;
 }
